@@ -11,8 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>An abstract base class to derive structures and marshal them.</summary>
-    <remarks>
-    </remarks>
+    <remarks>This class is not used by the generator as of 1.0 and will be removed in future versions.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -57,9 +56,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <returns>a <see cref="T:System.IntPtr" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Do not use.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Obj">
@@ -70,9 +69,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <returns>a <see cref="T:System.Object" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Do not use.</remarks>
       </Docs>
     </Member>
   </Members>
