@@ -1,3 +1,8 @@
+2004-07-02  Mike Kestner  <mkestner@ximian.com>
+
+	* en/GLib/*.xml : docs for Boxed, ConnectBeforeAttribute, and 
+	DefaultSignalHandlerAttribute.
+
 2004-07-02  Peter Johanson <latexer@gentoo.org>
 
 	* en/Art/*.xml : docs for some Art API.
